@@ -65,6 +65,7 @@ https://github.com/elastic/beats/compare/v5.0.0-alpha4...master[Check the HEAD d
 - Add enabled setting to packetbeat network flows configuration. {pull}1988[1988]
 
 *Metricbeat*
+- Add pgid field to process information. {pull} 2021[2021]
 
 *Packetbeat*
 
